fix: undo API
